Repositories, services and basic controllers added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,16 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 # automatic execution of DDL commands by Hibernate for creation of tables
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+
+# data.sql location for db filling
+spring.sql.init.data-locations=classpath:sql/data.sql
+
+# datasource setup
+spring.datasource.url=jdbc:postgresql://localhost:5432/imdb
+spring.datasource.username=postgres
+spring.datasource.password=1789
 
 
 
