--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/imdb
 spring.datasource.username=postgres
 spring.datasource.password=1789
 
+#logging.level.org.hibernate.SQL=DEBUG
+
 
 
 
