DirectorRepository Tests added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.data-locations=classpath:sql/data.sql
 
 # datasource setup
-spring.datasource.url=jdbc:postgresql://localhost:5432/imdb
-spring.datasource.username=postgres
-spring.datasource.password=1789
+spring.datasource.url=jdbc:postgresql://localhost:5435/imdb
+spring.datasource.username=spring
+spring.datasource.password=spring
 
 #logging.level.org.hibernate.SQL=DEBUG
 
