unit tests for DirectorApiController and DirectorService

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:12222/imdb-test
 spring.datasource.username=springtest
 spring.datasource.password=springtest
+
+# just to be more flexible while testing
+spring.sql.init.mode=always
+
+# path to the test dataset
+spring.sql.init.data-locations=classpath:sql/data-test.sql
