--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "bootswatch": "^5.3.3"
+    "bootswatch": "^5.3.3",
+    "joi": "^17.13.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
