ci + cache + csv import

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:12222/imdb-test
+spring.datasource.url=jdbc:postgresql://${CI_DB_HOST_PORT:localhost:12222}/imdb-test
 spring.datasource.username=springtest
 spring.datasource.password=springtest
 
